--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@
 
   --breakpoint-xs: 480px;
 
-  --background-image-hero-pattern: url('/images/hero-bg.png');
+  /* --background-image-hero-pattern: url('/images/hero-bg.png'); */
 }
 
 @layer base {
@@ -50,7 +50,8 @@
 
 @layer components {
   .pattern {
-    @apply bg-hero-pattern w-screen h-screen bg-center bg-cover absolute z-0;
+    /* @apply bg-hero-pattern w-screen h-screen bg-center bg-cover absolute z-0; */
+    @apply w-screen h-screen bg-center bg-cover absolute z-0;
   }
 
   .wrapper {
