--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@
 
 @import 'tailwindcss';
 
+:root {
+  --background-image-hero-pattern: url('/hero-bg.png');
+}
+
 @theme {
   --color-primary: #030014;
 
@@ -17,7 +21,7 @@
 
   --breakpoint-xs: 480px;
 
-  --background-image-hero-pattern: url('hero-bg.png');
+  /* --background-image-hero-pattern: url('hero-bg.png'); */
 }
 
 @layer base {
@@ -50,8 +54,9 @@
 
 @layer components {
   .pattern {
-    @apply bg-hero-pattern w-screen h-screen bg-center bg-cover absolute z-0;
-    /* @apply w-screen h-screen bg-center bg-cover absolute z-0; */
+    background-image: var(--background-image-hero-pattern);
+    /* @apply bg-hero-pattern w-screen h-screen bg-center bg-cover absolute z-0; */
+    @apply w-screen h-screen bg-center bg-cover absolute z-0;
   }
 
   .wrapper {
